# bismuth-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  CAMERA.md  CONFIGURATION.md  DEVICE.md  GAMEOBJECT.md  KEYBOARDMOVEMENTCONTROLLER.md  MODEL.md  PIPELINE.md  RENDERER.md  RENDERSYSTEM.md  SETUP.md  SHADER.md  SWAPCHAIN.md  UTILS.md  WINDOW.md
engine/: CMakeLists.txt  Window.hpp  main.cpp
engine/scripts/: compile.bat  compile.sh
engine/shaders/src/: simple_shader.frag  simple_shader.vert
engine/src/: Camera.cpp  Camera.hpp  Device.cpp  Device.hpp  FirstApp.cpp  FirstApp.hpp  GameObject.cpp  GameObject.hpp  KeyboardMovementController.cpp  KeyboardMovementController.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SimpleRenderSystem.cpp  SimpleRenderSystem.hpp  SwapChain.cpp  SwapChain.hpp  Utils.hpp  Window.cpp  Window.hpp  main.cpp
